# punch-cli

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
cli/: .env  Cargo.toml
cli/src/: auth.rs  configs.rs  db.rs  keyring.rs  main.rs  model.rs  puncher.rs  utils.rs
cli/src/api/: api.rs  github.rs  mod.rs
cli/src/database/: mod.rs  task.rs
cli/src/managers/: auth.rs  keyring.rs  mod.rs
cli/src/utils/: clock.rs  errors.rs  mod.rs  printer.rs
migrations/2022-02-21-174821_create_tasks_table/: down.sql  up.sql
server/: Cargo.toml  Dockerfile.dev  Makefile
server/migrations/: 20230809224519_init.down.sql  20230809224519_init.up.sql
server/src/: configs.rs  main.rs  state.rs
server/src/api/: api.rs  gh.rs
server/src/models/: tasks.rs
server/src/routes/: auth.rs  mod.rs  punch.rs
server/src/utils/: errors.rs  guards.rs  jwt.rs  mod.rs  state.rs
src/: db.rs  lib.rs  main.rs  schema.rs
