[package]
name = "punch-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12"
clap = "3.1.1"
chrono = "0.4.21"
dateparser = "0.1.6"
diesel = { version = "1.4.8", features = ["sqlite"]}
diesel_migrations = "1.4.0"
hhmmss = "0.1.0"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
