[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
clap = "3.1.1"
chrono = "0.4.21"
dateparser = "0.1.6"
diesel = { version = "1.4.8", features = ["sqlite"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
hhmmss = "0.1.0"
keyring = "2.0.0"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
open = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.104"
tabwriter = { version = "1", features = ["ansi_formatting"] }
