[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
rocket = { verxion = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.159"
tokio = { version = "1", features = ["full"] }
