[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
base64 = "0.21.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.159"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
